# milvus-storage

cpp/: CMakeLists.txt  conanfile.py
cpp/cmake/: Utils.cmake
cpp/include/milvus-storage/common/: log.h
cpp/include/milvus-storage/filesystem/: s3_client.h  s3_internal.h  s3fs.h
cpp/include/milvus-storage/filesystem/s3/: multi_part_upload_s3_fs.h
cpp/include/milvus-storage/format/parquet/: file_writer.h
cpp/include/milvus-storage/packed/: reader.h
cpp/include/milvus-storage/reader/: packed_reader.h
cpp/src/: CMakeLists.txt
cpp/src/filesystem/: fs.cpp  s3_client.cpp  s3fs.cpp
cpp/src/filesystem/s3/: multi_part_upload_s3_fs.cpp
cpp/src/format/parquet/: file_writer.cpp
cpp/src/packed/: reader.cpp
cpp/src/reader/: packed_reader.cpp
cpp/src/storage/azure-blob-storage/: CMakeLists.txt  vcpkg.json
cpp/test/packed/: packed_test_base.h  reader_test.cpp
cpp/test/reader/: packed_reader_test.cpp
cpp/test/writer/splitter/: size_based_splitter_test.cpp  splitter_test_base.h
